@@ -993,6 +993,20 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     NULL
   },
+  { /* Canon PIXMA iX7000 --- with XML */
+    "PIXMA iX7000", 3,          /*model, model_id*/
+    842, 17*72,       /* max paper width and height */
+    10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
+    8,
+    &canon_PIXMA_iX7000_slotlist,
+    CANON_CAP_STD0|CANON_CAP_px|CANON_CAP_I|CANON_CAP_r|CANON_CAP_P|CANON_CAP_XML,0x64,control_cmd_PIXMA_iP4200,  /*features */
+    &canon_PIXMA_iX7000_modelist,
+    &canon_PIXMA_iX7000_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    NULL
+  },
   { /* Canon PIXMA MP510 --- like MP520 but without PPGgold paper support */
     "PIXMA MP510", 3,          /*model, model_id*/
     842, 17*72,       /* max paper width and height */
